<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ScrollView
        android:id="@+id/scrollView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/colorSecondary"
        android:paddingLeft="45dp"
        android:paddingRight="45dp"
        tools:layout_editor_absoluteY="72dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="vertical"
            android:paddingTop="24dp"
            android:paddingBottom="24dp">

            <TextView
                android:id="@+id/textName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:gravity="center"
                android:text="@string/name"
                android:textColor="@color/colorPrimary"
                android:textSize="18sp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/editName"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_marginBottom="25dp"
                android:width="200dp"
                android:autofillHints="true"
                android:background="@drawable/edit_rounded_border"
                android:inputType="textPersonName"
                android:padding="5dp"
                android:singleLine="true"
                android:textColor="@color/colorTextPrimary" />

            <TextView
                android:id="@+id/textSurname"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:gravity="center"
                android:text="@string/surname"
                android:textColor="@color/colorPrimary"
                android:textSize="18sp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/editSurname"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_marginBottom="25dp"
                android:width="200dp"
                android:autofillHints="true"
                android:background="@drawable/edit_rounded_border"
                android:inputType="textPersonName"
                android:padding="5dp"
                android:singleLine="true"
                android:textColor="@color/colorTextPrimary" />

            <TextView
                android:id="@+id/textCPF"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:gravity="center"
                android:text="@string/cpf"
                android:textColor="@color/colorPrimary"
                android:textSize="18sp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/editCPF"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_marginBottom="25dp"
                android:width="200dp"
                android:autofillHints="true"
                android:background="@drawable/edit_rounded_border"
                android:inputType="number"
                android:padding="5dp"
                android:singleLine="true"
                android:textColor="@color/colorTextPrimary" />

            <TextView
                android:id="@+id/textPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:gravity="center"
                android:text="@string/password"
                android:textColor="@color/colorPrimary"
                android:textSize="18sp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/editPassword"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_marginBottom="25dp"
                android:width="200dp"
                android:autofillHints="true"
                android:background="@drawable/edit_rounded_border"
                android:inputType="textPassword"
                android:padding="5dp"
                android:singleLine="true"
                android:textColor="@color/colorTextPrimary" />

            <TextView
                android:id="@+id/textPhone"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:gravity="center"
                android:text="@string/phone"
                android:textColor="@color/colorPrimary"
                android:textSize="18sp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/editPhone"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="25dp"
                android:autofillHints="true"
                android:background="@drawable/edit_rounded_border"
                android:inputType="phone"
                android:padding="5dp"
                android:singleLine="true"
                android:textColor="@color/colorTextPrimary" />

            <TextView
                android:id="@+id/textRole"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:gravity="center"
                android:text="@string/role"
                android:textColor="@color/colorSecondary"
                android:textSize="18sp"
                android:textStyle="bold" />

            <Spinner
                android:id="@+id/spinnerRoles"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_marginBottom="25dp"
                android:background="@drawable/button_rounded_border_secondary"
                android:dropDownWidth="match_parent"
                android:entries="@array/role_array"
                android:gravity="center"
                android:popupBackground="@color/colorPrimary"
                android:spinnerMode="dropdown" />

            <CheckBox
                android:id="@+id/checkAdmin"
                style="@android:style/Widget.CompoundButton.CheckBox"
                android:layout_width="wrap_content"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:checked="true"
                android:clickable="false"
                android:gravity="center"
                android:text="@string/admin"
                android:textColor="@color/colorPrimary"
                android:textColorLink="@color/colorPrimary"
                android:textIsSelectable="true"
                android:textSize="18sp"
                android:textStyle="bold" />

        </LinearLayout>
    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>